--- a/Project3/project3-Copy1.ipynb
+++ b/Project3/project3-Copy1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
      "text": [
       "My library versions\n",
       "numpy: 1.26.3\n",
-      "pytest: 7.4.4\n",
+      "pytest: 8.0.0\n",
       "torch: 2.1.2+cu121\n"
      ]
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -109,14 +109,14 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.11.7, pytest-7.4.4, pluggy-1.4.0\n",
-      "rootdir: /home/dschlege/teaching/csc350/Project3-Solutions\n",
+      "platform linux -- Python 3.11.7, pytest-8.0.0, pluggy-1.4.0\n",
+      "rootdir: /home/mabbe/CSC-350-HW/Project3\n",
       "plugins: anyio-4.2.0\n",
       "collected 1 item                                                               \u001b[0m\u001b[1m\n",
       "\n",
       "tests/test_environment.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 1.55s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 1.34s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -593,11 +593,11 @@
      "output_type": "stream",
      "text": [
       "Embedding for 'The':\n",
-      " tensor([[-0.7984,  0.3357,  0.2753,  1.7163]], grad_fn=<ViewBackward0>)\n",
+      " tensor([[-1.5256, -0.7502, -0.6540, -1.6095]], grad_fn=<ViewBackward0>)\n",
       "Embedding for 'Sound':\n",
-      " tensor([[ 0.4391,  1.1712,  1.7674, -0.0954]], grad_fn=<ViewBackward0>)\n",
+      " tensor([[ 0.8657,  0.2444, -0.6629,  0.8073]], grad_fn=<ViewBackward0>)\n",
       "Embedding for 'and' (from buffer lookahead):\n",
-      " tensor([[ 0.8657,  0.2444, -0.6629,  0.8073]], grad_fn=<ViewBackward0>)\n"
+      " tensor([[ 0.0612, -0.6177, -0.7981, -0.1316]], grad_fn=<ViewBackward0>)\n"
      ]
     }
    ],
@@ -636,17 +636,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-1.2443, -0.8323, -1.2844]], grad_fn=<LogSoftmaxBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(neural_net)\n",
     "torch.manual_seed(1) # DO NOT CHANGE, you can compare my output below to yours\n",
@@ -669,17 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.4285, -0.1363,  0.4046,  0.6006]], grad_fn=<AddmmBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(neural_net)\n",
     "torch.manual_seed(1) # DO NOT CHANGE\n",
@@ -701,7 +685,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Deliverable 3.1: Parser Training Code (15 points)\n",
     "We will now complete the parser and train it on our data. It is important to understand the difference between the following tasks:\n",
@@ -733,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,20 +732,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{DepGraphEdge(head=('ran', 2), modifier=('man', 1)), DepGraphEdge(head=('man', 1), modifier=('The', 0)), DepGraphEdge(head=('ran', 2), modifier=('away', 3)), DepGraphEdge(head=('<ROOT>', -1), modifier=('ran', 2))}\n",
-      "[0, 1, 0, 1, 0, 2, 2, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "reload(parsing)\n",
     "torch.manual_seed(1)\n",
@@ -776,7 +753,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Now Train the Parser!"
    ]
